# librutina

./: CMakeLists.txt  librutina.kdev4
.kdev4/: _custom.kdev4  libardrone.kdev4  librutina.kdev4
config/: rutina.json  rutina.json~
include/: librutina.hpp  structures.hpp
include/classes/: CheckPoints.hpp  robot_configuration.hpp  rutina_configuration.hpp
include/config/: configuration.hpp  configutarion.hpp
include/message/: message_server.hpp
include/util/: util.hpp  util.hpp~
src/: CMakeLists.txt  librutina.cpp
src/classes/: CheckPoints.cpp  robot_configuration.cpp  rutina_configuration.cpp
src/util/: util.cpp  util.cpp~
